QA Project/force-app/main/default/objects/Invoice__c/fields/Amount_to_transfer__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_transfer__c</fullName>
    <formula>IF(RecordType.Name == &apos;Service Invoice&apos;,(1 - Course__r.Service_Tax_Rate__c) *  Sub_Total__c,  Sub_Total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount to transfer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>