QA Project/force-app/main/default/objects/Invoice__c/fields/Exp_Number__c.field-meta.xml
<CustomField>
    <fullName>Exp_Number__c</fullName>
    <displayFormat>Exp-{0000}</displayFormat>
    <label>Exp Number</label>
    <type>AutoNumber</type>
</CustomField>