QA Project/force-app/main/default/objects/Invoice__c/fields/Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Due_Date__c</fullName>
    <description>Invoice due date is 30 days after the submitted date</description>
    <formula>Submitted_Date__c + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Due Date</label>
    <type>Date</type>
</CustomField>