QA Project/force-app/main/default/objects/Invoice__c/fields/Serv_Number__c.field-meta.xml
<CustomField>
    <fullName>Serv_Number__c</fullName>
    <displayFormat>Serv-{0000}</displayFormat>
    <label>Serv Number</label>
    <type>AutoNumber</type>
</CustomField>