QA Project/force-app/main/default/objects/Invoice__c/fields/Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total__c</fullName>
    <label>Sub Total</label>
    <summarizedField>Invoice_Line_Item__c.Invoice_Amount__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>