QA Project/force-app/main/default/objects/Invoice__c/fields/Totat_After_VAT__c.field-meta.xml
<CustomField>
    <fullName>Totat_After_VAT__c</fullName>
    <formula>Sub_Total__c * (1 +   Course__r.VAT_Rate__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total After VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>