QA Project/force-app/main/default/objects/Invoice__c/recordTypes/Expense_Invoices.recordType-meta.xml
<RecordType>
    <fullName>Expense_Invoices</fullName>
    <active>true</active>
    <label>Expense Invoices</label>
</RecordType>