QA Project/force-app/main/default/objects/Invoice__c/validationRules/not_a_future_date.validationRule-meta.xml
<ValidationRule>
    <fullName>not_a_future_date</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Paid_Date__c &gt; TODAY(),   Submitted_Date__c &gt; TODAY() )</errorConditionFormula>
    <errorMessage>You cant enter a date in the future!</errorMessage>
</ValidationRule>