QA Project/force-app/main/default/objects/Invoice__c/validationRules/provide_date_for_paid_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>provide_date_for_paid_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status__c , &quot;Paid&quot; ),  ISBLANK( Paid_Date__c ))</errorConditionFormula>
    <errorMessage>Please provide a paid date if you wish to change the status to paid</errorMessage>
</ValidationRule>