QA Project/force-app/main/default/objects/Invoice__c/validationRules/provide_date_for_submit_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>provide_date_for_submit_rule</fullName>
    <active>true</active>
    <description>if you want to change the status to submitted, please enter a date in the appropriate field</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c ,&apos;Submitted&apos;), ISBLANK(Submitted_Date__c) )</errorConditionFormula>
    <errorMessage>Provide a submitted date if you want to change the status to &apos;submitted&apos;</errorMessage>
</ValidationRule>